<resources>
    <string name="app_name">PayScan</string>
    <string name="title_email">E-mail:</string>
    <string name="title_password">Šifra:</string>
    <string name="title_login">Prijavi se</string>
    <string name="option_signup">\nNemaš račun? Kreiraj ga!</string>
    <string name="option_password">Zaboravili ste šifru?</string>
    <string name="placeholder_password">Šifra</string>
    <string name="placeholder_email">E-mail</string>
    <string name="title_name">Ime:</string>
    <string name="placeholder_name">Ime</string>
    <string name="option_login">Već ste član? Prijavite se</string>
    <string name="button_signup">Registruj se</string>
    <string name="title_repassword">Ponovo unesite šifru:</string>
    <string name="placeholder_repassword">Ponovo unesite šifru</string>
    <string name="product_thumbnail_description">Prikaz proizvoda</string>
    <string name="API_URL">https://payscan-api.herokuapp.com/rest/products</string>
    <string name="log_out">Odjavi se</string>
    <string name="title_activity_product_drawer">Najnoviji proizvodi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Postavke</string>
    <string name="log_out_nav">Odjava</string>
    <string name="nav_account_info">Korisnički nalog</string>
    <string name="categories_nav">Kategorije</string>
    <string name="buy_button">Kupi</string>
    <string name="price_tag">Cijena</string>
    <string name="location_tag">Lokacija</string>
    <string name="category_tag">Kategorija</string>
    <string name="seller_tag">Prodavač</string>
</resources>
